# Mazadak

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
ai-service/: .dockerignore  .env.example  Dockerfile  pyproject.toml
ai-service/app/: main.py
ai-service/app/api/: __init__.py
ai-service/app/core/: config.py
ai-service/app/models/: schemas.py
ai-service/app/services/: clip_service.py  content_generator.py  fraud.py  moderation.py  price_oracle.py
ai-service/app/tests/: test_endpoints.py
app/: main.py
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
backend/.github/workflows/: ci.yml  deploy-prod.yml
backend/app/: main.py
backend/app/api/v1/: __init__.py  webhooks.py
backend/app/core/: analytics.py  celery.py  clickhouse.py  config.py  database.py  exceptions.py  logging.py  middleware.py  redis.py  security.py  types.py
backend/app/db/: seed.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial_schema.py  0002_launch_blockers.py  0003_dispute_messages.py  0004_listing_currency.py  0005_b2b_enhancements.py
backend/app/services/admin/: models.py  router.py  schemas.py  service.py
backend/app/services/ai/: dependencies.py  models.py  price_oracle.py  router.py  schemas.py  service.py  snap_pipeline.py
backend/app/services/auction/: dependencies.py  lifecycle.py  lua_scripts.py  models.py  router.py  schemas.py  service.py  ws.py
backend/app/services/auth/: admin_router.py  ats_service.py  dependencies.py  kyc_service.py  models.py  router.py  schemas.py  service.py
backend/app/services/b2b/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/services/b2b/templates/: award_letter.html  compliance_report.html
backend/app/services/bot/: nlp.py  router.py  service.py
backend/app/services/escrow/: deadline_monitor.py  deadlines.py  dependencies.py  fsm.py  models.py  router.py  schemas.py  service.py  shipping.py  webhook.py
backend/app/services/listing/: currency.py  dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/services/notification/: channels.py  dispatchers.py  models.py  router.py  schemas.py  service.py  templates.py
backend/app/services/search/: indexer.py  models.py  router.py  schemas.py  service.py
backend/app/services/webhook/: checkout_handler.py
backend/app/services/whatsapp_bot/: arabic_numbers.py  models.py  nlp.py  router.py  schemas.py  service.py  templates.py  transcription.py
backend/app/tasks/: ai.py  analytics.py  auction.py  escrow.py  kyc.py  listing.py  notification.py  search.py
backend/app/tests/: conftest.py  locust_ws_load.py  test_ats.py  test_auction_redis.py  test_auction_ws.py  test_auth.py  test_auth_deps.py  test_b2b.py  test_bot.py  test_checkout_webhook.py  test_deadline_monitor.py  test_email_notification.py  test_escrow_deadlines.py  test_escrow_fsm.py  test_full_flow_integration.py  test_health.py  test_kyc.py  test_listings.py  test_lua_bid_script.py  test_notification_pipeline.py  test_payout.py  test_price_oracle.py  test_search.py  test_search_integration.py  test_search_pipeline.py  test_snap_pipeline.py  test_webhook_checkout.py
backend/scripts/: seed.py
loadtests/: locustfile_ws.py
mobile/: README.md  (+1 more)
(+158 files in other folders)
